--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-react-app-tut",
+  "name": "react-asynchronous-setstate-tut",
   "version": "0.1.0",
   "private": true,
   "author": "Ivan Ganev <ganevio92@gmail.com>",
